--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -27,25 +27,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Get dependencies
         run: go mod download
+      - name: Check module is ready
+        run: go mod tidy
+      - name: Verify module
+        run: go mod verify
       - name: Test
         run: go test -v ./...
-
-  publish:
-    name: Publish Package
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.18'
-      - name: Get dependencies
-        run: go mod download
-      - name: Update Go module index
-        run: |
-          VERSION=$(go list -m | awk '{print $2}')
-          GOPROXY=proxy.golang.org go list -m github.com/tobolabs/coco@$VERSION
-          
