--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -15,14 +15,12 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-version: [1.16, 1.17, 1.18]
     steps:
-      - name: Set up Go
+      - name: Set up Go 1.18
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: '1.18'
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
       - name: Get dependencies
